<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#37474F"
    android:isScrollContainer="true" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context=".callDetailsActivity" >

        <TimePicker
            android:id="@+id/call_details_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/call_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/call_details_time_picker"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="@string/details_call_name" />

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/call_details_name" />

        <EditText
            android:id="@+id/autodial_number"
            android:inputType="phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/call_details_name"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:hint="Call Number" />

        <View
            android:id="@+id/divider2"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/autodial_number" />



        <com.smartlifedigital.autodialer.CustomSwitch
            android:id="@+id/call_details_repeat_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/divider2"
            android:checked="true"
            android:text="@string/details_repeat_weekly" />

        <View
            android:id="@+id/divider1"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/call_details_repeat_weekly" />

        <com.smartlifedigital.autodialer.CustomSwitch
            android:id="@+id/call_details_repeat_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/divider1"
            android:checked="true"
            android:text="@string/details_sunday" />

        <com.smartlifedigital.autodialer.CustomSwitch
            android:id="@+id/call_details_repeat_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/call_details_repeat_sunday"
            android:layout_below="@+id/call_details_repeat_sunday"
            android:checked="true"
            android:text="@string/details_monday" />

        <com.smartlifedigital.autodialer.CustomSwitch
            android:id="@+id/call_details_repeat_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/call_details_repeat_monday"
            android:layout_below="@+id/call_details_repeat_monday"
            android:checked="true"
            android:text="@string/details_tuesday" />

        <com.smartlifedigital.autodialer.CustomSwitch
            android:id="@+id/call_details_repeat_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/call_details_repeat_tuesday"
            android:layout_below="@+id/call_details_repeat_tuesday"
            android:checked="true"
            android:text="@string/details_wednesday" />

        <com.smartlifedigital.autodialer.CustomSwitch
            android:id="@+id/call_details_repeat_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/call_details_repeat_wednesday"
            android:layout_below="@+id/call_details_repeat_wednesday"
            android:checked="true"
            android:text="@string/details_thursday" />

        <com.smartlifedigital.autodialer.CustomSwitch
            android:id="@+id/call_details_repeat_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/call_details_repeat_thursday"
            android:layout_below="@+id/call_details_repeat_thursday"
            android:checked="true"
            android:text="@string/details_friday" />

        <com.smartlifedigital.autodialer.CustomSwitch
            android:id="@+id/call_details_repeat_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/call_details_repeat_friday"
            android:layout_below="@+id/call_details_repeat_friday"
            android:checked="true"
            android:text="@string/details_saturday" />

        <View
            android:id="@+id/divider4"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/call_details_repeat_saturday" />

        <LinearLayout
            android:id="@+id/call_ringtone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/view_touch_selector"
            android:orientation="vertical"
            android:layout_below="@+id/divider4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/call_label_tone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/details_call_tone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/call_label_tone_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/details_call_tone_default"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            style="@style/Divider"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/call_ringtone_container" />


    </RelativeLayout>

</ScrollView>